--- a/src/components/About.css
+++ b/src/components/About.css
@@ -12,6 +12,18 @@
   align-items: center;
 }
 
+.about-left h1 {
+  font-size: 2.5rem;
+  color: #f4ce14;
+  margin: 0;
+}
+
+.about-left h2 {
+  font-size: 2rem;
+  color: #f4ce14;
+  margin: 0;
+}
+
 .about-left {
   grid-column: span 6; /* Left side for content */
 }
