--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -20,9 +20,15 @@
   grid-column: span 6;
 }
 
-.hero-left h1,
-.hero-left h2 {
+.hero-left h1 {
+  font-size: 2.5rem;
   color: #f4ce14;
+  margin: 0;
+}
+
+.hero-left h2 {
+  font-size: 2rem;
+  color: white;
   margin: 0;
 }
 
